gh-23 Fixed footer width on mobile

--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -199,8 +199,9 @@ footer.site-footer {
       }
 
       & > .subscribe {
-        input {
+        form input {
           margin-bottom: 4px;
+          width: 254px;
         }
       }
     }
